Fix hamburger alignment, move padding from li to a

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -9,11 +9,13 @@
   background-color: white;
   color: black;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
-position: relative;
+  position: relative;
   background: var(--bg-color);
   color: var(--text-color);
   font-family: var(--font-paragraph);
@@ -94,7 +96,7 @@ input[type=text]:focus,
 input[type=number]:focus,
 input[type=email]:focus,
 input[type=tel]:focus,
-textarea:focus{
+textarea:focus {
   border: 1px solid var(--blue);
   color: var(--almost-white);
   outline: none;
@@ -166,7 +168,7 @@ nav {
   z-index: 998;
 
   width: 100%;
-  min-height: 60px;
+  min-height: var(--navbar-min-height);
 
   display: flex;
   flex-wrap: wrap;
@@ -180,9 +182,12 @@ nav {
 }
 
 nav #logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: var(--font-size-lg);
   flex-basis: 100%;
-  text-align: center;
+  min-height: var(--navbar-min-height);
 }
 
 nav #logo a {
@@ -199,14 +204,14 @@ nav ul {
 }
 
 nav ul li {
-  padding: var(--padding-sm);
   text-align: center;
 }
 
 nav ul li a {
   color: var(--font-color);
   text-decoration: none;
-
+  padding: var(--padding-sm);
+  display: block;
 }
 
 nav ul li a.active {
@@ -218,7 +223,7 @@ nav ul li a.active {
   position: fixed;
   top: 0;
   z-index: 990;
-  height: 60px;
+  height: var(--navbar-min-height);
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
 }
@@ -230,11 +235,13 @@ nav ul li a.active {
 
 /* Label for mobile-menu checkbox */
 #menu-toggle-label {
+  --hamburger-height: 30px;
   z-index: 999;
   cursor: pointer;
   position: fixed;
-  font-size: 30px;
-  top: 8px;
+  font-size: var(--hamburger-height);
+  line-height: 1;
+  top: calc(var(--hamburger-height)/2.5);
   right: 10px;
   width: 40px;
   text-align: center;
@@ -248,7 +255,7 @@ nav ul li a.active {
 }
 
 #menu-toggle:checked+nav #menu-toggle-label::before {
-  content: "✖";
+  content: "×";
 }
 
 #menu-toggle:checked+nav {
@@ -457,22 +464,23 @@ footer ul {
   .footer-content {
     padding: var(--padding-xl) 0;
   }
+
   .totop-container {
     position: absolute;
     top: 0;
-    right:0;
+    right: 0;
     height: 100%;
   }
-  
+
   .totop-container:before {
     content: '';
     display: block;
     height: 100vh;
     pointer-events: none;
   }
-  
+
   .totop-container a {
-    margin:10px;
+    margin: 10px;
     opacity: 0.8;
     position: sticky;
     top: 88vh;
@@ -507,8 +515,12 @@ footer ul {
   }
 
   nav ul li {
-    padding: 0px var(--padding-sm);
     display: inline-block;
+  }
+
+  nav ul li a {
+    padding: 0px var(--padding-sm);
+    display: block;
   }
 
   /* Set order of left and right menu */
